# practical-sql-injection-test

./: README.md  docker-compose.yml
src/: Dockerfile  init.sh  query.sql
src/app/: main.py  pyproject.toml
src/app/inject/: view.py
src/app/libs/: database.py
