[tool.poetry]
name = "sql-injection-test"
version = "0.1.0"
description = ""
authors = ["fealone"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
sqlalchemy = "^1.3.19"
pymysql = "^0.10.1"
uvicorn = "^0.11.8"
cryptography = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 80"
reload = "uvicorn main:app --host 0.0.0.0 --port 80 --reload"
